--- a/radar_ego_velocity_estimator/package.xml
+++ b/radar_ego_velocity_estimator/package.xml
@@ -12,15 +12,21 @@
 
     <author email="christopher.doer@kit.edu">Christopher Doer</author>
 
-    <buildtool_depend>catkin</buildtool_depend>
-    <buildtool_depend>catkin_simple</buildtool_depend>
-
-    <depend>rosbag</depend>
-    <depend>roscpp</depend>
+    <depend>rclcpp</depend>
+    <depend>std_msgs</depend>
+    <depend>sensor_msgs</depend>
+    <depend>geometry_msgs</depend>
     <depend>angles</depend>
-    <depend>dynamic_reconfigure</depend>
     <depend>pcl_ros</depend>
+    <depend>pcl_conversions</depend>
+    <depend>Eigen3</depend>
+    <depend>tf2_eigen</depend>
+    <depend>pcl</depend>
+
+    <test_depend>ament_lint_auto</test_depend>
+    <test_depend>ament_lint_common</test_depend>
 
     <export>
+        <build_type>ament_cmake</build_type>
     </export>
 </package>
